--- a/index.html
+++ b/index.html
@@ -16,40 +16,48 @@
         </div>
     </div>
     <div class="text">
-        <div class="main-text">This website is Awesome!</div>
-        <div class="sub-text">This website has some subtext that goes under th3 main title. It's a smaller font and the color is lower in contrast.</div>
-    <button>Sign up</button>
+        <div class="main-sub-text">
+            <div class="main-text">This website is Awesome!</div>
+            <div class="sub-text">This website has some subtext that goes under the main title. It's a smaller font and the color is lower in contrast.</div> 
+            <button>Sign up</button>   
+        </div>
+
+        <div class="image"><img src="" alt=""></div>
     </div>
+
     <div class="info"><h2>Random Info</h2></div>
+
     <div class="cards">
         <div class="card-container">
-        <div class="card"><img src="" alt=""></div>
-        <p class="card-subtext">this is some subtext under an illustration or image</p>
-    </div>
+            <div class="card"><img src="" alt=""></div>
+            <p class="card-subtext">this is some subtext under an illustration or image</p>
+        </div>
 
-    <div class="card-container">
-        <div class="card"><img src="" alt=""></div>
-        <p class="card-subtext">this is some subtext under an illustration or image</p>
-    </div>
+        <div class="card-container">
+            <div class="card"><img src="" alt=""></div>
+            <p class="card-subtext">this is some subtext under an illustration or image</p>
+        </div>
 
-    <div class="card-container">
-        <div class="card"><img src="" alt=""></div>
-        <p class="card-subtext">this is some subtext under an illustration or image</p>
-    </div>    
+        <div class="card-container">
+            <div class="card"><img src="" alt=""></div>
+            <p class="card-subtext">this is some subtext under an illustration or image</p>
+        </div>    
 
-    <div class="card-container">
-        <div class="card"><img src="" alt=""></div>
-        <p class="card-subtext">this is some subtext under an illustration or image</p>
-    </div>
-
+        <div class="card-container">
+            <div class="card"><img src="" alt=""></div>
+            <p class="card-subtext">this is some subtext under an illustration or image</p>
+        </div>
     </div>
 
     <div class="quote">
         This is an inspiring quote, or a testimonial from a customer.<br> 
         Maybe it's just filing up a space, or maybe people will actually read it. <br>
         Who knows? <br> All i know is that it looks nice.
+
         <div class="god">-Panther God Bast</div>
     </div>
+
     <div class="footer">Footer</div>
+
 </body>
 </html>
